--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -205,5 +205,6 @@
   color: #bbbbbb;
 }
 .highlight {
-  background-color: #f8f8f8;
+  background-color: #514949;
+  border-radius: 5px 5px 0px 0px;
 }
