--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1,11 +1,55 @@
+html, body {
+	width: 100%;
+}
+
 .p4 {
 	padding: 20px;
 }
 
-.navbar-brand {
+#nav-text{
+    width: 100%;
+    color: white;
     font-family: 'Anton', sans-serif;
     font-size: 35px;
+    text-align: center;
 }
+
+/*Small screen
+
+Used for small screen or phone*/
+
+@media (min-width: 576px) {
+  /* change this, by default 540px */
+   .container {
+     max-width: 530px;
+  }
+}
+
+/*Medium screen
+
+Used for medium screen or tablet*/
+
+@media (min-width: 768px) {
+  /* change this, by default 720px */
+  .container {
+  max-width: 710px;
+  }
+}
+
+/*Large screen
+
+Used for large screen, Laptop or Desktop*/
+
+@media (min-width: 992px) {
+  /* change this, by default 960px */
+  .container {
+    max-width: 950px;
+  }
+}
+/*
+Extra large screen
+
+Used for extra large screen or desktop*/
 
 @media (min-width: 1200px) {
   /* change this, by default 1140px */
