--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -6,7 +6,7 @@ html, body {
 	padding: 20px;
 }
 
-#nav-text{
+.nav-text{
     width: 100%;
     color: white;
     font-family: 'Anton', sans-serif;
