--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -188,6 +188,9 @@ pre code {
   overflow-x: auto;
 }
 
+pre code .bold{
+  font-weight: bold;
+}
 
 blockquote p{
   color: #666;
@@ -272,6 +275,10 @@ Full-Width Styles
   color: white;
   font-family: monospace;
   border-radius: 5px 5px 0px 0px;
+}
+
+.bold{
+  font-weight: bold;
 }
 
 .outer {
