--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -205,6 +205,11 @@
 .highlight .w {
   color: #bbbbbb;
 }
+
+.highlight .bold{
+  font-weight: bold;
+}
+
 .highlight {
   background-color: #514949;
   border-radius: 0px 0px 0px 0px;
