--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -274,6 +274,11 @@ Full-Width Styles
   border-radius: 5px 5px 0px 0px;
 }
 
+.colbol{
+  font-weight:bold;
+  color: #931c3d;  
+}
+
 .outer {
   width: 100%;
 }
