--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -94,7 +94,9 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  font-family: inherit;
+  text-align: center;
+  color: #898585;
 }
 
 a {
@@ -120,7 +122,7 @@ a:hover, a:focus {
 
 footer a {
   color: #F2F2F2;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 em, cite {
