--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,34 @@
 ---
 
 @import "jekyll-theme-slate";
+
+.go-top {
+    position: fixed;
+    right: 2rem;
+    bottom: 2rem;
+    height: 30px;
+    outline: none;
+    border: 2px solid #bdbdbd;
+    border-radius: 30px;
+    padding: .3rem;
+
+    img {
+        transform: rotate(180deg);
+        margin: 0;
+        padding: 0;
+        border: none;
+    }
+}
+
+@media screen and (max-width: 870px) {
+    .go-top {
+        right: 1rem;
+        bottom: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .go-top {
+        display: none;
+    }
+}
