--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,7 @@
 
     img {
         transform: rotate(180deg);
+        box-shadow: none;
         margin: 0;
         padding: 0;
         border: none;
